// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should be closed by default 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should be not edidable 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should have a helptext 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div><span class="form-text">Type something</span>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should have a key 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should have a label 1`] = `
<div class="form-group"><label>label </label>
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should have a placeholder 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should have a predefinedValue 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should have a spritemap 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should have a value 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should have an id 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger" id="ID">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should have class dropdown-opened when it's opened 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should not be required 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should put an asterisk when field is required 1`] = `
<div class="form-group"><label>This is the label <span class="reference-mark"><svg class="lexicon-icon lexicon-icon-asterisk" focusable="false" role="presentation">
        <use xlink:href="icons.svg#asterisk"></use>
      </svg></span></label>
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should render Label if showLabel is true 1`] = `
<div class="form-group"><label>text </label>
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should render no options when options come empty 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
  </ul>
</div>
`;

exports[`Select should render options 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="label" type="button">label</button></li>
  </ul>
</div>
`;

exports[`Select should render the dropdown with search when there are more than six options 1`] = `
<div class="form-group">
  <div class="dropdown ddm-btn-full ddm-select-dropdown"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" type="button">
      <div class="form-builder-select-field input-group-container">
        <div class="form-control select-field-trigger">
          <div class="option-selected option-selected-placeholder">choose-an-option</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
              <use xlink:href="icons.svg#caret-double"></use>
            </svg></a>
        </div>
      </div>
    </button></div>
</div>
<div class="dropdown-menu" ref="menu">
  <form>
    <div class="dropdown-section">
      <div class="input-group input-group-sm">
        <div class="input-group-item"><input aria-label="Search for..." class="form-control input-group-inset input-group-inset-after" placeholder="Search for..." type="text" ref="searchInput"><span class="input-group-inset-item input-group-inset-item-after"><button class="btn btn-link" aria-label="search" type="button"><svg class="lexicon-icon lexicon-icon-search" focusable="false" role="presentation">
                <use xlink:href="icons.svg#search"></use>
              </svg></button></span></div>
      </div>
    </div>
  </form>
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="choose-an-option" type="button">choose-an-option</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="label" type="button">label</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="label" type="button">label</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="label" type="button">label</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="label" type="button">label</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="label" type="button">label</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="label" type="button">label</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="label" type="button">label</button></li>
  </ul>
</div>
`;
